# icfp-contest-2017

./: .gitignore  LICENSE  LICENSE.md  README.md  install  punter.cabal
src/: Demo.hs  Main.hs  Options.hs
src/lib/: ClientState.hs  Definitions.hs  Game.hs  Protocol.hs
test/: ProtocolTest.hs  RulesTest.hs
