name:                   punter
version:                1.0
build-type:             Simple
cabal-version:          >= 1.20
license:                MIT
copyright:              Copyright © 2017 The Church of the Least Fixed Punt
author:                 Miëtek Bak <hello@mietek.io>
maintainer:             Miëtek Bak <hello@mietek.io>
stability:              experimental
homepage:               https://github.com/mietek/icfp-contest-2017
license-file:           LICENSE.md
extra-source-files:     README.md, install
synopsis:               TODO
description:            TODO
                        
library
  hs-source-dirs:         src/lib
  exposed-modules:        Definitions,
                          Protocol,
                          ClientState
  default-language:       Haskell2010
  default-extensions:     OverloadedStrings,
                          RecordWildCards
  ghc-options:            -O2 -Wall
  build-depends:          base,
                          aeson,
                          bytestring,
                          containers

executable punter
  hs-source-dirs:         src
  main-is:                Main.hs
  default-language:       Haskell2010
  default-extensions:     OverloadedStrings,
                          RecordWildCards
  ghc-options:            -O2 -Wall -threaded
  build-depends:          base,
                          aeson,
                          bytestring,
                          containers,
                          optparse-applicative,
                          punter
                          
test-suite test           
  type:                   exitcode-stdio-1.0
  hs-source-dirs:         test
  main-is:                Test.hs
  default-language:       Haskell2010
  default-extensions:     OverloadedStrings,
                          RecordWildCards
  build-depends:          base,
                          aeson,
                          bytestring,
                          containers,
                          punter,
                          tasty,
                          tasty-discover,
                          tasty-hunit
